<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ticback"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/progress"
            android:padding="16dp"
            android:text="@string/tic_tac_toe"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="46sp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_below="@id/title"
            android:layout_margin="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/log" />

        <Button
            android:id="@+id/by3"
            style="@style/homeBtn"
            android:layout_below="@id/logo"
            android:text="@string/_3_x_3" />

        <Button
            android:id="@+id/by4"
            style="@style/homeBtn"
            android:layout_below="@id/by3"
            android:text="@string/_4_x_4" />

        <Button
            android:id="@+id/by5"
            style="@style/homeBtn"
            android:layout_below="@id/by4"
            android:text="@string/_5_x_5" />

        <Button
            android:id="@+id/computer"
            style="@style/homeBtn"
            android:layout_below="@id/logo"
            android:text="@string/vs_computer"
            android:visibility="gone" />

        <Button
            android:id="@+id/humans"
            style="@style/homeBtn"
            android:layout_below="@id/computer"
            android:text="@string/vs_human"
            android:visibility="gone" />

        <Button
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/logo"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:fontFamily="@font/princess"
            android:paddingBottom="4dp"
            android:paddingEnd="36dp"
            android:paddingStart="36dp"
            android:paddingTop="4dp"
            android:text="@string/x"
            android:textSize="26sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/logo"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:fontFamily="@font/princess"
            android:paddingBottom="4dp"
            android:paddingEnd="36dp"
            android:paddingStart="36dp"
            android:paddingTop="4dp"
            android:text="@string/o"
            android:textSize="26sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/rand"
            style="@style/homeBtn"
            android:layout_below="@id/x"
            android:text="@string/random"
            android:visibility="gone" />

        <EditText
            android:id="@+id/pone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/logo"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/player_one"
            android:inputType="text"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/ptwo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/pone"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/player_two"
            android:inputType="text"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/start"
            style="@style/homeBtn"
            android:layout_below="@id/ptwo"
            android:text="@string/start"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/restart"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="4dp"
            android:background="@color/white"
            android:contentDescription="@string/restart_image"
            android:fontFamily="@font/princess"
            android:padding="8dp"
            android:src="@drawable/restart"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>