<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ticback"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/progress"
        android:padding="8dp"
        android:text="@string/tic_tac_toe"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="46sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:src="@drawable/log"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:padding="8dp"
        android:text="@string/about_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingBottom="16dp"
        android:text="@string/developed_by_kenzie"/>

</RelativeLayout>